--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.2
+  scoped_model: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
